tests/baselines/reference/importAnImport.errors.txt
importAnImport.ts(6,23): error TS2694: Namespace 'c.a.b' has no exported member 'ma'.


==== importAnImport.ts (1 errors) ====
    namespace c.a.b {
        import ma = a;
    }
    
    namespace m0 {
        import m8 = c.a.b.ma;
                          ~~
!!! error TS2694: Namespace 'c.a.b' has no exported member 'ma'.
    }